web/web-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web
  template:
    metadata:
      labels:
        app: web
    spec:
      containers:
        - name: web-container
          image: url-shortener-web-service:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8000
          command: ["gunicorn", "url_shortener.app:app", "--bind", "0.0.0.0:8000"]
